--- a/JENKINS-CI/jenkinsfile
+++ b/JENKINS-CI/jenkinsfile
@@ -4,7 +4,7 @@ pipeline {
     stages {
         stage('Git-checkout') {
             steps {
-                git branch: 'main', url: 'https://github.com/saharerahul/Nodejs-Application.git'
+                git branch: 'main', credentialsId: 'git-cred', url: 'https://github.com/saharerahul/Nodejs-Application.git'
             }
         }
         stage('Docker Build') {
@@ -21,7 +21,19 @@ pipeline {
                 }
             }
         }
+
+        
     }
+
+    post {
+        success {
+            echo 'image pushed successfully!'
+        }
+        failure {
+            echo 'failed to push image!'
+        }
+    }
+}
 
     post {
         success {
